[jvm/ci] Generate test report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
     - checkout:
         path: ~/signer
-    - run: ./gradlew check
+    - run: ./gradlew check jacocoTestReport
     - store_test_results:
         path: ./jvm/build/test-results
 
