--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 ext {
-    PUBLISH_VERSION = '0.1.0'
+    PUBLISH_VERSION = '0.1.1'
     SITE_URL = 'https://github.com/wulkanowy/uonet-request-signer'
     GIT_URL = 'https://github.com/wulkanowy/uonet-request-signer.git'
 }
@@ -51,7 +51,7 @@ bintray {
         userOrg = 'wulkanowy'
         licenses = ['Apache-2.0']
         vcsUrl = GIT_URL
-        labels = ['aar', 'wulkanowy', 'api']
+        labels = ['aar', 'wulkanowy', 'uonet-request-signer']
         publicDownloadNumbers = true
         publish = true
 
