--- a/jvm/build.gradle
+++ b/jvm/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "commons-codec:commons-codec:1.13"
+    implementation "com.brsanthu:migbase64:2.2"
     testImplementation "junit:junit:4.12"
 }
 
