--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
         path: ~/signer
     - run: npm install
     - run: ./node_modules/.bin/mocha
-  node-hebe:
+  nodehebe:
     working_directory: ~/signer-hebe/hebe-node
     docker:
       - image: circleci/node:12
