--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
         path: ~/signer
     - run: npm install
     - run: ./node_modules/.bin/mocha
-  nodehebe:
+  node-hebe:
     working_directory: ~/signer-hebe/hebe-node
     docker:
       - image: circleci/node:12
@@ -53,5 +53,6 @@ workflows:
     jobs:
     - php
     - node
+    - node-hebe
     - jvm
     - python
