Add root gradle module

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@ vendor
 package-lock.json
 *.iml
 android/lib/src/main/gen
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
