--- a/hebe-jvm/build.gradle
+++ b/hebe-jvm/build.gradle
@@ -1,48 +1,4 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
-    id 'jacoco'
-}
-
-group 'io.github.wulkanowy'
-version '0.1.0-SNAPSHOT'
-
-sourceCompatibility = 1.6
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "com.brsanthu:migbase64:2.2"
-    testImplementation "junit:junit:4.13"
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-    }
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
+    id 'org.jetbrains.kotlin.jvm'
 }
